# ice_1D_pinn

./: LICENSE  README.md  pyproject.toml
pinn_clusters/: __init__.py  _data.py  _error_func.py  _loss.py  _loss_colo.py  _model.py  _optimization.py
